--- a/doctor-ai/package.json
+++ b/doctor-ai/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.48.1",
     "axios": "^1.7.9",
+    "babel-plugin-dotenv": "^0.1.1",
     "expo": "~52.0.28",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.5",
