--- a/doctor-ai/package.json
+++ b/doctor-ai/package.json
@@ -43,9 +43,11 @@
     "react-native-body-highlighter": "^3.1.3",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-simple-markdown": "^1.1.0",
     "react-native-svg": "^15.11.1",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
